# DawnOfEmpires

./: .gitignore  CMakeLists.txt  README.md
etc/: create_component.sh
scripts/: create_component.sh
src/: main.cpp  main.h.in  main.hpp
src/ActionMenu/: ActionMenu.cpp  ActionMenu.hpp  ActionMenuPage.cpp  ActionMenuPage.hpp  ButtonCallback.cpp  ButtonCallback.hpp  CMakeLists.txt
src/AnimatedAsset/: AnimatedAsset.cpp  AnimatedAsset.hpp  CMakeLists.txt
src/Animator/: Animator.cpp  Animator.hpp  CMakeLists.txt
src/AssetManager/: AssetManager.cpp  AssetManager.hpp.in  CMakeLists.txt
src/BaseComponent/: BaseComponent.cpp  BaseComponent.hpp  CMakeLists.txt
src/ButtonMenu/: ButtonMenu.cpp  ButtonMenu.hpp  CMakeLists.txt
src/ContextMenu/: CMakeLists.txt  ContextMenu.cpp  ContextMenu.hpp
src/Empire/: CMakeLists.txt  Empire.cpp  Empire.hpp
src/GameContext/: CMakeLists.txt  GameContext.cpp  GameContext.hpp
src/GameController/: CMakeLists.txt  GameController.cpp  GameController.hpp
src/GenericMenu/: CMakeLists.txt  GenericMenu.cpp  GenericMenu.hpp
src/HelpArea/: CMakeLists.txt  HelpActionsPage.cpp  HelpActionsPage.hpp  HelpArea.cpp  HelpArea.hpp  HelpPage.cpp  HelpPage.hpp  HelpStatsPage.cpp  HelpStatsPage.hpp
src/IdGenerator/: CMakeLists.txt  IdGenerator.cpp  IdGenerator.hpp
src/IncrementDecrementControl/: CMakeLists.txt  IncrementDecrementControl.cpp  IncrementDecrementControl.hpp
src/MainMenu/: CMakeLists.txt  Callbacks.hpp  MainMenu.cpp  MainMenu.hpp  SettingsPage.hpp  StartingPage.hpp
src/MenuElement/: CMakeLists.txt  MenuElement.cpp  MenuElement.hpp
src/PauseMenu/: CMakeLists.txt  PauseMenu.cpp  PauseMenu.hpp
src/Resource/: CMakeLists.txt  ResourceBase.cpp  ResourceSource.hpp  Resources.hpp
src/ResourceBar/: CMakeLists.txt  ResourceBar.cpp  ResourceBar.hpp
src/StackMenu/: CMakeLists.txt  StackMenu.cpp  StackMenu.hpp
src/TileMap/: CMakeLists.txt  TileMap.cpp  TileMap.hpp
src/TilePiece/: CMakeLists.txt  ConstructionTile.hpp  GrassTile.hpp  MineTile.hpp  TilePiece.cpp  TilePiece.hpp  TileTypeStrategy.hpp  TileTypeStrategyFactory.hpp
src/TilePiece/TilesTypes/: ConstructionTile.hpp  DesertTile.hpp  ForestTile.hpp  GrassTile.hpp  MineTile.hpp  WaterTile.hpp
src/Window/: CMakeLists.txt  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp
src/WindowManager/: CMakeLists.txt  WindowManager.cpp  WindowManager.hpp
src/WinnerScreen/: CMakeLists.txt  WinnerScreen.cpp  WinnerScreen.hpp
